--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
   </div>
 </header>
 
+<!-- ===== PROGRESSO ===== -->
+<div class="progress-bar">
+  <div class="step active">Missão</div>
+  <div class="step">Fase 1</div>
+  <div class="step">Fase 2</div>
+  <div class="step">Fase 3</div>
+  <div class="step">Fase 4</div>
+  <div class="step">Fase 5</div>
+</div>
+
 <main class="app-container">
 
   <!-- SPLASH -->
@@ -63,7 +73,7 @@
     </form>
   </section>
 
-  <!-- FASES (estrutura garantida, textos permanecem no JS/HTML anterior) -->
+  <!-- FASES -->
   <section id="phase1" class="screen"><form id="phase1Form" class="checklist"></form></section>
   <section id="phase2" class="screen"><form id="phase2Form" class="checklist"></form></section>
   <section id="phase3" class="screen"><form id="phase3Form" class="checklist"></form></section>
