--- a/index.html
+++ b/index.html
@@ -11,27 +11,19 @@
 
 <header class="app-header">
   <div class="header-left">
-    <img src="assets/logos/coarp.png" class="header-logo" alt="COARP">
+    <img src="assets/logos/coarp.png" alt="COARP" class="header-logo">
     <span class="header-title">Checklist Operacional RPAS</span>
   </div>
   <div class="header-right">
-    <a href="https://github.com/leaphar1979/checklist-rpas/blob/main/README.md"
-       target="_blank"
-       class="header-link">
+    <a
+      href="https://github.com/leaphar1979/checklist-rpas/blob/main/README.md"
+      target="_blank"
+      class="header-link"
+    >
       📘 Sobre / Doutrina
     </a>
   </div>
 </header>
-
-<!-- ===== PROGRESSO ===== -->
-<div class="progress-bar">
-  <div class="step active">Missão</div>
-  <div class="step">Fase 1</div>
-  <div class="step">Fase 2</div>
-  <div class="step">Fase 3</div>
-  <div class="step">Fase 4</div>
-  <div class="step">Fase 5</div>
-</div>
 
 <main class="app-container">
 
@@ -74,11 +66,25 @@
   </section>
 
   <!-- FASES -->
-  <section id="phase1" class="screen"><form id="phase1Form" class="checklist"></form></section>
-  <section id="phase2" class="screen"><form id="phase2Form" class="checklist"></form></section>
-  <section id="phase3" class="screen"><form id="phase3Form" class="checklist"></form></section>
-  <section id="phase4" class="screen"><form id="phase4Form" class="checklist"></form></section>
-  <section id="phase5" class="screen"><form id="phase5Form" class="checklist"></form></section>
+  <section id="phase1" class="screen">
+    <form id="phase1Form" class="checklist"></form>
+  </section>
+
+  <section id="phase2" class="screen">
+    <form id="phase2Form" class="checklist"></form>
+  </section>
+
+  <section id="phase3" class="screen">
+    <form id="phase3Form" class="checklist"></form>
+  </section>
+
+  <section id="phase4" class="screen">
+    <form id="phase4Form" class="checklist"></form>
+  </section>
+
+  <section id="phase5" class="screen">
+    <form id="phase5Form" class="checklist"></form>
+  </section>
 
   <!-- PDF -->
   <section id="pdfScreen" class="screen">
