--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button id="startBtn">Iniciar Checklist</button>
   </section>
 
-  <!-- MISSÃO -->
+  <!-- IDENTIFICAÇÃO DA MISSÃO -->
   <section id="mission" class="screen">
     <h2>Identificação da Missão</h2>
     <form id="missionForm">
@@ -65,26 +65,22 @@
     </form>
   </section>
 
-  <!-- FASES -->
+  <!-- FASE 1 (TESTE DE FLUXO) -->
   <section id="phase1" class="screen">
-    <form id="phase1Form" class="checklist"></form>
+    <h2>Fase 1 — Pré-Missão</h2>
+    <form id="phase1Form" class="checklist">
+      <p style="opacity:0.7; font-style: italic;">
+        Conteúdo do checklist da Fase 1 será exibido aqui.
+      </p>
+      <button type="submit">Avançar</button>
+    </form>
   </section>
 
-  <section id="phase2" class="screen">
-    <form id="phase2Form" class="checklist"></form>
-  </section>
-
-  <section id="phase3" class="screen">
-    <form id="phase3Form" class="checklist"></form>
-  </section>
-
-  <section id="phase4" class="screen">
-    <form id="phase4Form" class="checklist"></form>
-  </section>
-
-  <section id="phase5" class="screen">
-    <form id="phase5Form" class="checklist"></form>
-  </section>
+  <!-- DEMAIS FASES (AINDA NÃO IMPLEMENTADAS) -->
+  <section id="phase2" class="screen"></section>
+  <section id="phase3" class="screen"></section>
+  <section id="phase4" class="screen"></section>
+  <section id="phase5" class="screen"></section>
 
   <!-- PDF -->
   <section id="pdfScreen" class="screen">
