--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </form>
   </section>
 
-  <!-- FASE 1 (TESTE DE FLUXO) -->
+  <!-- FASE 1 -->
   <section id="phase1" class="screen">
     <h2>Fase 1 — Pré-Missão</h2>
     <form id="phase1Form" class="checklist">
@@ -76,8 +76,18 @@
     </form>
   </section>
 
+  <!-- FASE 2 (TESTE DE FLUXO) -->
+  <section id="phase2" class="screen">
+    <h2>Fase 2 — Execução</h2>
+    <form id="phase2Form" class="checklist">
+      <p style="opacity:0.7; font-style: italic;">
+        Conteúdo do checklist da Fase 2 será exibido aqui.
+      </p>
+      <button type="submit">Avançar</button>
+    </form>
+  </section>
+
   <!-- DEMAIS FASES (AINDA NÃO IMPLEMENTADAS) -->
-  <section id="phase2" class="screen"></section>
   <section id="phase3" class="screen"></section>
   <section id="phase4" class="screen"></section>
   <section id="phase5" class="screen"></section>
