--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </form>
   </section>
 
-  <!-- FASE 2 (TESTE DE FLUXO) -->
+  <!-- FASE 2 -->
   <section id="phase2" class="screen">
     <h2>Fase 2 — Execução</h2>
     <form id="phase2Form" class="checklist">
@@ -87,8 +87,18 @@
     </form>
   </section>
 
+  <!-- FASE 3 (TESTE DE FLUXO) -->
+  <section id="phase3" class="screen">
+    <h2>Fase 3 — Pós-Execução</h2>
+    <form id="phase3Form" class="checklist">
+      <p style="opacity:0.7; font-style: italic;">
+        Conteúdo do checklist da Fase 3 será exibido aqui.
+      </p>
+      <button type="submit">Avançar</button>
+    </form>
+  </section>
+
   <!-- DEMAIS FASES (AINDA NÃO IMPLEMENTADAS) -->
-  <section id="phase3" class="screen"></section>
   <section id="phase4" class="screen"></section>
   <section id="phase5" class="screen"></section>
 
