--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </form>
   </section>
 
-  <!-- FASE 3 (TESTE DE FLUXO) -->
+  <!-- FASE 3 -->
   <section id="phase3" class="screen">
     <h2>Fase 3 — Pós-Execução</h2>
     <form id="phase3Form" class="checklist">
@@ -98,8 +98,18 @@
     </form>
   </section>
 
+  <!-- FASE 4 (TESTE DE FLUXO) -->
+  <section id="phase4" class="screen">
+    <h2>Fase 4 — Retorno / Encerramento</h2>
+    <form id="phase4Form" class="checklist">
+      <p style="opacity:0.7; font-style: italic;">
+        Conteúdo do checklist da Fase 4 será exibido aqui.
+      </p>
+      <button type="submit">Avançar</button>
+    </form>
+  </section>
+
   <!-- DEMAIS FASES (AINDA NÃO IMPLEMENTADAS) -->
-  <section id="phase4" class="screen"></section>
   <section id="phase5" class="screen"></section>
 
   <!-- PDF -->
