--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </form>
   </section>
 
-  <!-- FASE 4 (TESTE DE FLUXO) -->
+  <!-- FASE 4 -->
   <section id="phase4" class="screen">
     <h2>Fase 4 — Retorno / Encerramento</h2>
     <form id="phase4Form" class="checklist">
@@ -109,8 +109,16 @@
     </form>
   </section>
 
-  <!-- DEMAIS FASES (AINDA NÃO IMPLEMENTADAS) -->
-  <section id="phase5" class="screen"></section>
+  <!-- FASE 5 (TESTE DE FLUXO FINAL) -->
+  <section id="phase5" class="screen">
+    <h2>Fase 5 — Pós-Missão</h2>
+    <form id="phase5Form" class="checklist">
+      <p style="opacity:0.7; font-style: italic;">
+        Conteúdo do checklist da Fase 5 será exibido aqui.
+      </p>
+      <button type="submit">Finalizar Checklist</button>
+    </form>
+  </section>
 
   <!-- PDF -->
   <section id="pdfScreen" class="screen">
