--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <div class="header-right">
     <a href="https://github.com/leaphar1979/checklist-rpas/blob/main/README.md"
        target="_blank"
-       class="header-link">
-      📘 Sobre / Doutrina
-    </a>
+       class="header-link">📘 Sobre / Doutrina</a>
   </div>
 </header>
 
@@ -50,70 +48,65 @@
 
 <section id="phase1" class="screen">
   <h2>Fase 1 – Preparação para o Voo</h2>
-
   <form id="phase1Form" class="checklist">
+    <!-- Fase 1 já validada anteriormente -->
+    <button type="submit">Avançar</button>
+  </form>
+</section>
 
-    <label><input type="checkbox"> Itens de Conforto: providenciar repelente, protetor solar, boné, segunda pele, hidratação, alimentação</label>
+<section id="phase2" class="screen">
+  <h2>Fase 2 – Prevoo (Realizado no local da missão)</h2>
 
-    <label><input type="checkbox"> Criação/manutenção/Login conta DJI conectando o celular no controle como roteador</label>
+  <form id="phase2Form" class="checklist">
 
-    <label><input type="checkbox"> Controle de Integridade Física da Aeronave</label>
+    <label><input type="checkbox"> Confirmar condições climáticas.</label>
 
-    <label><input type="checkbox"> Manusear a aeronave com mão dupla e não segurar pelas hastes</label>
+    <label><input type="checkbox"> Realizar um planejamento visual projetando a trajetória de voo (inclusive do retorno) e identificando obstáculos, bem como locais para pousos de emergência.</label>
 
-    <label><input type="checkbox"> Verificar shell (estrutura), braços (hastes), integridade das hélices, rotor/estator</label>
+    <label><input type="checkbox"> Controle de Integridade Física da Aeronave- manusear a aeronave com mão dupla e não segurar pelas hastes (Local para trabalhar firme, sem risco de queda, com poucos materiais para evitar extravio de peças da aeronave, livre de resíduos, fluídos, calor etc)</label>
 
-    <label><input type="checkbox"> Verificar/carregar bateria do controle e a que estará no drone</label>
+    <label><input type="checkbox"> Confirmar se as baterias estão totalmente carregadas &gt; Drone, Controle, Celular, *Rádio para falar com operador e Reservas</label>
 
-    <label><input type="checkbox"> Abertura dos braços de sustentação</label>
+    <label><input type="checkbox"> Aberturas dos braços de sustentação. Os de cima para frente e os debaixo para baixo. Antes da bateria para não forçar.</label>
 
-    <label><input type="checkbox"> Inserir cartão microSD compatível conforme fabricante</label>
+    <label><input type="checkbox"> Verificar os cartões de memórias inseridos</label>
 
-    <label><input type="checkbox"> Fixação correta das hélices</label>
+    <label><input type="checkbox"> Fixação das Hélices- dois tipos de hélices quanto a rotação. Levantar a aeronave para fixação para preservação das hastes</label>
 
-    <label><input type="checkbox"> Inserir bateria corretamente e preservar trava</label>
+    <label><input type="checkbox"> Retirada da tampa e da trava do Gimbal. Colocar na maleta para não perder ou ser extraviado ou danificado nem ficar exposto ao sol para não trincar. Não tirar antes para evitar que o gimbal fique “trabalhando” sem necessidade.</label>
 
-    <label><input type="checkbox"> Posicionar aeronave em local seguro para decolagem</label>
+    <label><input type="checkbox"> Inserir bateria. Botão para a direita, luzes para a esquerda. Grips para cima. Apertar os Grips e empurrar. Preservar travas.</label>
 
-    <label><input type="checkbox"> Abrir antenas do controle para frente</label>
+    <label><input type="checkbox"> Posicionar a aeronave em local seguro para decolagem. Sempre deixar uma margem de segurança em todas as direções para o caso de uma imprecisão do gps e ele necessitar realizar o RTH.</label>
 
-    <label><input type="checkbox"> Ligar o rádio controle primeiro</label>
+    <label><input type="checkbox"> Abrir as Hélices para evitar a força no eixo dos rotores e a trepidação na carcaça da aeronave.</label>
 
-    <label><input type="checkbox"> Retirada da tampa/trava do gimbal</label>
+    <label><input type="checkbox"> Ligar o Rádio Controle. Primeiro para evitar o Fly away. Criptografia é melhor mas novas interferências. ex: 5g, tv digital etc.</label>
 
-    <label><input type="checkbox"> Ligar a aeronave com cuidado para não forçar as hastes</label>
+    <label><input type="checkbox"> Ligar a Aeronave</label>
 
-    <label><input type="checkbox"> Verificar necessidade de atualizações</label>
+    <label><input type="checkbox"> Configurar a altura do RTH (sujeita a confirmação no prevoo)</label>
 
-    <label><input type="checkbox"> Verificar Aircraft Status e corrigir erros (COMPASS/IMU)</label>
+    <label><input type="checkbox"> Configurar a altura e distância limites</label>
 
-    <label><input type="checkbox"> Configurar altura do RTH</label>
+    <label><input type="checkbox"> Configurar a ação em caso de perda de sinal/ comunicação da aeronave e rádio</label>
 
-    <label><input type="checkbox"> Configurar altura e distância limites</label>
+    <label><input type="checkbox"> Configurar a ação para CRITICAL LOW BATTERY (15-30%)</label>
 
-    <label><input type="checkbox"> Configurar ação em caso de perda de sinal</label>
+    <label><input type="checkbox"> Confirmar a recepção de satélites, mínimo 12 satélites</label>
 
-    <label><input type="checkbox"> Configurar ação para CRITICAL LOW BATTERY</label>
+    <label><input type="checkbox"> Confirmar a marcação de HOMEPOINT no mapa (ícone H)</label>
 
-    <label><input type="checkbox"> Confirmar recepção mínima de 12 satélites</label>
+    <label><input type="checkbox"> Avisar a equipe que a aeronave está pronta para decolagem</label>
 
-    <label><input type="checkbox"> Confirmar HOMEPOINT no mapa</label>
+    <label><input type="checkbox"> Confirmar se o observador está pronto e se seu celular e/ou rádio estão carregados.</label>
 
-    <label><input type="checkbox"> Posicionar drone e piloto corretamente para teste</label>
-
-    <label><input type="checkbox"> Acionar motores</label>
-
-    <label><input type="checkbox"> Realizar varredura holística 360°</label>
-
-    <label><input type="checkbox"> Decolar e testar comandos básicos</label>
-
-    <label><input type="checkbox"> Pousar aeronave e cortar motores</label>
+    <label><input type="checkbox"> Acionar os motores- aperte e solte o botão da bateria e depois segure por uns 3 segundos.</label>
 
     <button type="submit">Avançar</button>
   </form>
 </section>
 
-<section id="phase2" class="screen"></section>
 <section id="phase3" class="screen"></section>
 <section id="phase4" class="screen"></section>
 <section id="phase5" class="screen"></section>
