--- a/index.html
+++ b/index.html
@@ -48,66 +48,57 @@
 
 <section id="phase1" class="screen">
   <h2>Fase 1 – Preparação para o Voo</h2>
-  <form id="phase1Form" class="checklist">
-    <!-- Fase 1 já validada anteriormente -->
+  <form class="checklist">
     <button type="submit">Avançar</button>
   </form>
 </section>
 
 <section id="phase2" class="screen">
-  <h2>Fase 2 – Prevoo (Realizado no local da missão)</h2>
+  <h2>Fase 2 – Prevoo</h2>
+  <form class="checklist">
+    <button type="submit">Avançar</button>
+  </form>
+</section>
 
-  <form id="phase2Form" class="checklist">
+<section id="phase3" class="screen">
+  <h2>Fase 3 – Voo da Aeronave (Durante a missão)</h2>
 
-    <label><input type="checkbox"> Confirmar condições climáticas.</label>
+  <form id="phase3Form" class="checklist">
 
-    <label><input type="checkbox"> Realizar um planejamento visual projetando a trajetória de voo (inclusive do retorno) e identificando obstáculos, bem como locais para pousos de emergência.</label>
+    <label><input type="checkbox"> Manter vigilância constante em relação a EXISTÊNCIA e/ou aproximação de aeronaves tripuladas em QUALQUER local. Principalmente as aeronaves de asas rotativas podem realizar pousos de forma rápida em locais pouco usuais e improváveis.</label>
 
-    <label><input type="checkbox"> Controle de Integridade Física da Aeronave- manusear a aeronave com mão dupla e não segurar pelas hastes (Local para trabalhar firme, sem risco de queda, com poucos materiais para evitar extravio de peças da aeronave, livre de resíduos, fluídos, calor etc)</label>
+    <label><input type="checkbox"> Ao verificar a EXISTÊNCIA e/ou aproximação de aeronaves tripuladas, POUSE IMEDIATAMENTE sua aeronave. Salvo por imperiosa necessidade E, ADICIONALMENTE, se já coordenado DE FORMA INEQUÍVOCA com o Comandante da aeronave tripulada previamente E TAMBÉM no momento do voo.</label>
 
-    <label><input type="checkbox"> Confirmar se as baterias estão totalmente carregadas &gt; Drone, Controle, Celular, *Rádio para falar com operador e Reservas</label>
+    <label><input type="checkbox"> Caso haja atuação AUTORIZADA PREVIAMENTE de atuação híbrida de aeronaves tripuladas com não tripuladas, JAMAIS voe com sua aeronave fora do perímetro previamente estipulado, ainda que esteja longe da aeronave tripulada.</label>
 
-    <label><input type="checkbox"> Aberturas dos braços de sustentação. Os de cima para frente e os debaixo para baixo. Antes da bateria para não forçar.</label>
+    <label><input type="checkbox"> Verificar constantemente as condições climáticas.</label>
 
-    <label><input type="checkbox"> Verificar os cartões de memórias inseridos</label>
+    <label><input type="checkbox"> Considerar a assimetria de consumo de bateria no vento a favor e contra.</label>
 
-    <label><input type="checkbox"> Fixação das Hélices- dois tipos de hélices quanto a rotação. Levantar a aeronave para fixação para preservação das hastes</label>
+    <label><input type="checkbox"> Manter-se afastado dos pássaros</label>
 
-    <label><input type="checkbox"> Retirada da tampa e da trava do Gimbal. Colocar na maleta para não perder ou ser extraviado ou danificado nem ficar exposto ao sol para não trincar. Não tirar antes para evitar que o gimbal fique “trabalhando” sem necessidade.</label>
+    <label><input type="checkbox"> Manter atenção com fios e demais obstáculos</label>
 
-    <label><input type="checkbox"> Inserir bateria. Botão para a direita, luzes para a esquerda. Grips para cima. Apertar os Grips e empurrar. Preservar travas.</label>
+    <label><input type="checkbox"> Após concluir a missão</label>
 
-    <label><input type="checkbox"> Posicionar a aeronave em local seguro para decolagem. Sempre deixar uma margem de segurança em todas as direções para o caso de uma imprecisão do gps e ele necessitar realizar o RTH.</label>
+    <label><input type="checkbox"> Avisar a equipe que a aeronave está vindo para pouso</label>
 
-    <label><input type="checkbox"> Abrir as Hélices para evitar a força no eixo dos rotores e a trepidação na carcaça da aeronave.</label>
+    <label><input type="checkbox"> Certificar-se que o local é livre de quaisquer tipo de obstáculos estáticos e dinâmicos.</label>
 
-    <label><input type="checkbox"> Ligar o Rádio Controle. Primeiro para evitar o Fly away. Criptografia é melhor mas novas interferências. ex: 5g, tv digital etc.</label>
+    <label><input type="checkbox"> Pousar sempre com a retaguarda voltada para o piloto.</label>
 
-    <label><input type="checkbox"> Ligar a Aeronave</label>
+    <label><input type="checkbox"> Verificar se será necessário algum voo complementar</label>
 
-    <label><input type="checkbox"> Configurar a altura do RTH (sujeita a confirmação no prevoo)</label>
+    <label><input type="checkbox"> Cortar o motor utilizando o Stick Esquerdo</label>
 
-    <label><input type="checkbox"> Configurar a altura e distância limites</label>
+    <label><input type="checkbox"> Desligar a aeronave</label>
 
-    <label><input type="checkbox"> Configurar a ação em caso de perda de sinal/ comunicação da aeronave e rádio</label>
-
-    <label><input type="checkbox"> Configurar a ação para CRITICAL LOW BATTERY (15-30%)</label>
-
-    <label><input type="checkbox"> Confirmar a recepção de satélites, mínimo 12 satélites</label>
-
-    <label><input type="checkbox"> Confirmar a marcação de HOMEPOINT no mapa (ícone H)</label>
-
-    <label><input type="checkbox"> Avisar a equipe que a aeronave está pronta para decolagem</label>
-
-    <label><input type="checkbox"> Confirmar se o observador está pronto e se seu celular e/ou rádio estão carregados.</label>
-
-    <label><input type="checkbox"> Acionar os motores- aperte e solte o botão da bateria e depois segure por uns 3 segundos.</label>
+    <label><input type="checkbox"> Desligar o Controle- até aqui o voo poderia ser reiniciado por alguma necessidade. Por isso a inclusão ainda na fase de voo</label>
 
     <button type="submit">Avançar</button>
   </form>
 </section>
 
-<section id="phase3" class="screen"></section>
 <section id="phase4" class="screen"></section>
 <section id="phase5" class="screen"></section>
 
