--- a/index.html
+++ b/index.html
@@ -46,60 +46,39 @@
   </form>
 </section>
 
-<section id="phase1" class="screen">
-  <h2>Fase 1 – Preparação para o Voo</h2>
-  <form class="checklist">
-    <button type="submit">Avançar</button>
-  </form>
-</section>
+<section id="phase1" class="screen"></section>
+<section id="phase2" class="screen"></section>
+<section id="phase3" class="screen"></section>
 
-<section id="phase2" class="screen">
-  <h2>Fase 2 – Prevoo</h2>
-  <form class="checklist">
-    <button type="submit">Avançar</button>
-  </form>
-</section>
+<section id="phase4" class="screen">
+  <h2>Fase 4 – Pós-Voo da Aeronave</h2>
 
-<section id="phase3" class="screen">
-  <h2>Fase 3 – Voo da Aeronave (Durante a missão)</h2>
+  <form id="phase4Form" class="checklist">
 
-  <form id="phase3Form" class="checklist">
+    <label><input type="checkbox"> Retirar a bateria da aeronave</label>
 
-    <label><input type="checkbox"> Manter vigilância constante em relação a EXISTÊNCIA e/ou aproximação de aeronaves tripuladas em QUALQUER local. Principalmente as aeronaves de asas rotativas podem realizar pousos de forma rápida em locais pouco usuais e improváveis.</label>
+    <label><input type="checkbox"> Colocar a tampa/trava do gimbal</label>
 
-    <label><input type="checkbox"> Ao verificar a EXISTÊNCIA e/ou aproximação de aeronaves tripuladas, POUSE IMEDIATAMENTE sua aeronave. Salvo por imperiosa necessidade E, ADICIONALMENTE, se já coordenado DE FORMA INEQUÍVOCA com o Comandante da aeronave tripulada previamente E TAMBÉM no momento do voo.</label>
+    <label><input type="checkbox"> Fechar as hélices com cuidado</label>
 
-    <label><input type="checkbox"> Caso haja atuação AUTORIZADA PREVIAMENTE de atuação híbrida de aeronaves tripuladas com não tripuladas, JAMAIS voe com sua aeronave fora do perímetro previamente estipulado, ainda que esteja longe da aeronave tripulada.</label>
+    <label><input type="checkbox"> Dobrar os braços de sustentação</label>
 
-    <label><input type="checkbox"> Verificar constantemente as condições climáticas.</label>
+    <label><input type="checkbox"> Guardar a aeronave em local seguro</label>
 
-    <label><input type="checkbox"> Considerar a assimetria de consumo de bateria no vento a favor e contra.</label>
+    <label><input type="checkbox"> Retirar o cartão de memória e providenciar o armazenamento seguro das imagens</label>
 
-    <label><input type="checkbox"> Manter-se afastado dos pássaros</label>
+    <label><input type="checkbox"> Verificar integridade física da aeronave após o voo</label>
 
-    <label><input type="checkbox"> Manter atenção com fios e demais obstáculos</label>
+    <label><input type="checkbox"> Verificar necessidade de recarga das baterias</label>
 
-    <label><input type="checkbox"> Após concluir a missão</label>
+    <label><input type="checkbox"> Registrar qualquer anormalidade observada durante o voo</label>
 
-    <label><input type="checkbox"> Avisar a equipe que a aeronave está vindo para pouso</label>
-
-    <label><input type="checkbox"> Certificar-se que o local é livre de quaisquer tipo de obstáculos estáticos e dinâmicos.</label>
-
-    <label><input type="checkbox"> Pousar sempre com a retaguarda voltada para o piloto.</label>
-
-    <label><input type="checkbox"> Verificar se será necessário algum voo complementar</label>
-
-    <label><input type="checkbox"> Cortar o motor utilizando o Stick Esquerdo</label>
-
-    <label><input type="checkbox"> Desligar a aeronave</label>
-
-    <label><input type="checkbox"> Desligar o Controle- até aqui o voo poderia ser reiniciado por alguma necessidade. Por isso a inclusão ainda na fase de voo</label>
+    <label><input type="checkbox"> Comunicar o encerramento do voo à equipe</label>
 
     <button type="submit">Avançar</button>
   </form>
 </section>
 
-<section id="phase4" class="screen"></section>
 <section id="phase5" class="screen"></section>
 
 <section id="pdfScreen" class="screen">
