--- a/index.html
+++ b/index.html
@@ -49,37 +49,32 @@
 <section id="phase1" class="screen"></section>
 <section id="phase2" class="screen"></section>
 <section id="phase3" class="screen"></section>
+<section id="phase4" class="screen"></section>
 
-<section id="phase4" class="screen">
-  <h2>Fase 4 – Pós-Voo da Aeronave</h2>
+<section id="phase5" class="screen">
+  <h2>Fase 5 – Pós-Missão / Encerramento</h2>
 
-  <form id="phase4Form" class="checklist">
+  <form id="phase5Form" class="checklist">
 
-    <label><input type="checkbox"> Retirar a bateria da aeronave</label>
+    <label><input type="checkbox"> Conferir se todas as imagens e vídeos foram devidamente armazenados em mídia segura</label>
 
-    <label><input type="checkbox"> Colocar a tampa/trava do gimbal</label>
+    <label><input type="checkbox"> Garantir o sigilo e a guarda adequada das imagens geradas pela aeronave</label>
 
-    <label><input type="checkbox"> Fechar as hélices com cuidado</label>
+    <label><input type="checkbox"> Registrar a missão em relatório próprio, quando aplicável</label>
 
-    <label><input type="checkbox"> Dobrar os braços de sustentação</label>
+    <label><input type="checkbox"> Informar a chefia imediata sobre a conclusão da missão</label>
 
-    <label><input type="checkbox"> Guardar a aeronave em local seguro</label>
+    <label><input type="checkbox"> Registrar eventuais intercorrências ou irregularidades observadas durante a missão</label>
 
-    <label><input type="checkbox"> Retirar o cartão de memória e providenciar o armazenamento seguro das imagens</label>
+    <label><input type="checkbox"> Providenciar a limpeza e organização dos equipamentos utilizados</label>
 
-    <label><input type="checkbox"> Verificar integridade física da aeronave após o voo</label>
+    <label><input type="checkbox"> Armazenar corretamente a aeronave, baterias e acessórios</label>
 
-    <label><input type="checkbox"> Verificar necessidade de recarga das baterias</label>
+    <label><input type="checkbox"> Encerrar formalmente a missão</label>
 
-    <label><input type="checkbox"> Registrar qualquer anormalidade observada durante o voo</label>
-
-    <label><input type="checkbox"> Comunicar o encerramento do voo à equipe</label>
-
-    <button type="submit">Avançar</button>
+    <button type="submit">Finalizar Checklist</button>
   </form>
 </section>
-
-<section id="phase5" class="screen"></section>
 
 <section id="pdfScreen" class="screen">
   <h2>Checklist Concluído</h2>
