--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 
 <main class="app-container">
 
-<section id="splash" class="screen active splash-screen">
+<!-- SPLASH -->
+<section id="splash" class="screen active">
   <h1>Checklist Operacional RPAS</h1>
+  <p class="subtitle">COARP · NOARP · SAER · PCSC</p>
   <button id="startBtn">Iniciar Checklist</button>
 </section>
 
+<!-- IDENTIFICAÇÃO -->
 <section id="mission" class="screen">
   <h2>Identificação da Missão</h2>
   <form id="missionForm">
@@ -46,38 +49,65 @@
   </form>
 </section>
 
-<section id="phase1" class="screen"></section>
-<section id="phase2" class="screen"></section>
-<section id="phase3" class="screen"></section>
-<section id="phase4" class="screen"></section>
+<!-- FASE 1 -->
+<section id="phase1" class="screen">
+  <h2>Fase 1 – Preparação para o Voo</h2>
+  <form id="phase1Form" class="checklist">
+    <p class="placeholder">
+      Checklist oficial carregado nesta fase.
+    </p>
+    <button type="submit">Avançar</button>
+  </form>
+</section>
 
+<!-- FASE 2 -->
+<section id="phase2" class="screen">
+  <h2>Fase 2 – Prevoo</h2>
+  <form id="phase2Form" class="checklist">
+    <p class="placeholder">
+      Checklist oficial carregado nesta fase.
+    </p>
+    <button type="submit">Avançar</button>
+  </form>
+</section>
+
+<!-- FASE 3 -->
+<section id="phase3" class="screen">
+  <h2>Fase 3 – Voo da Aeronave</h2>
+  <form id="phase3Form" class="checklist">
+    <p class="placeholder">
+      Checklist oficial carregado nesta fase.
+    </p>
+    <button type="submit">Avançar</button>
+  </form>
+</section>
+
+<!-- FASE 4 -->
+<section id="phase4" class="screen">
+  <h2>Fase 4 – Pós-Voo da Aeronave</h2>
+  <form id="phase4Form" class="checklist">
+    <p class="placeholder">
+      Checklist oficial carregado nesta fase.
+    </p>
+    <button type="submit">Avançar</button>
+  </form>
+</section>
+
+<!-- FASE 5 -->
 <section id="phase5" class="screen">
   <h2>Fase 5 – Pós-Missão / Encerramento</h2>
-
   <form id="phase5Form" class="checklist">
-
-    <label><input type="checkbox"> Conferir se todas as imagens e vídeos foram devidamente armazenados em mídia segura</label>
-
-    <label><input type="checkbox"> Garantir o sigilo e a guarda adequada das imagens geradas pela aeronave</label>
-
-    <label><input type="checkbox"> Registrar a missão em relatório próprio, quando aplicável</label>
-
-    <label><input type="checkbox"> Informar a chefia imediata sobre a conclusão da missão</label>
-
-    <label><input type="checkbox"> Registrar eventuais intercorrências ou irregularidades observadas durante a missão</label>
-
-    <label><input type="checkbox"> Providenciar a limpeza e organização dos equipamentos utilizados</label>
-
-    <label><input type="checkbox"> Armazenar corretamente a aeronave, baterias e acessórios</label>
-
-    <label><input type="checkbox"> Encerrar formalmente a missão</label>
-
+    <p class="placeholder">
+      Checklist oficial carregado nesta fase.
+    </p>
     <button type="submit">Finalizar Checklist</button>
   </form>
 </section>
 
+<!-- FINAL -->
 <section id="pdfScreen" class="screen">
   <h2>Checklist Concluído</h2>
+  <p>Procedimento finalizado e registrado.</p>
   <button id="generatePdfBtn">Gerar PDF</button>
 </section>
 
